--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,6 +19,16 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
+# resize current pane
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+# maximize current pane
+unbind z
+bind -r m resize-pane -Z
+
 # transparent status bar
 set -g status-bg default
 set -g status-style bg=default
@@ -53,7 +63,3 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-# maximize current pane
-unbind z
-bind -r m resize-pane -Z
