--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,14 +1,14 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
 
 [window]
-opacity = 0.9
+opacity = 0.92
 blur = true
 padding = { x = 4, y = 4 }
+startup_mode = "Maximized"
 
 [font]
-size = 12.5
-normal = { family = "Jet Brains Mono Nerd Font", style = "Regular" }
+size = 19
+normal = { family = "Fira Mono", style = "Regular" }
