--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,11 +4,11 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [window]
-opacity = 0.92
+opacity = 0.9
 blur = true
 padding = { x = 4, y = 4 }
 startup_mode = "Maximized"
 
 [font]
-size = 19
-normal = { family = "Fira Mono", style = "Regular" }
+size = 14
+normal = { family = "FiraCode Nerd Font", style = "Regular" }
