--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -10,5 +10,5 @@ padding = { x = 4, y = 4 }
 startup_mode = "Maximized"
 
 [font]
-size = 14
-normal = { family = "FiraCode Nerd Font", style = "Regular" }
+size = 13
+normal = { family = "RobotoMono Nerd Font", style = "Regular" }
