reorganized files and created an instalation script

--- a/hypr/config/hyprland.conf
+++ b/hypr/config/hyprland.conf
@@ -5,13 +5,13 @@ monitor=DP-1,1920x1080,1920x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = ~/dotfiles/.config/hypr/scripts/xdg.sh
+exec-once = ~/dotfiles/hypr/scripts/xdg.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
 exec-once = mako
 exec-once = wl-paste --watch cliphist store
 exec-once = swww init
-exec-once = ~/dotfiles/.config/hypr/scripts/wallpaper.sh init
+exec-once = ~/dotfiles/hypr/scripts/wallpaper.sh init
 exec-once = hypridle
 
 # Some default env vars.
@@ -148,12 +148,12 @@ bind = $mainMod SHIFT, F, fullscreen,
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 
-bind = $mainMod, L, exec, ~/dotfiles/.config/hypr/scripts/logout.sh
-bind = $mainMod, W, exec, ~/dotfiles/.config/hypr/scripts/wallpaper.sh random
-bind = $mainMod SHIFT, W, exec, ~/dotfiles/.config/hypr/scripts/wallpaper.sh picker
-bind = $mainMod, S, exec, ~/dotfiles/.config/hypr/scripts/screenshot.sh rect
-bind = $mainMod SHIFT, S, exec, ~/dotfiles/.config/hypr/scripts/screenshot.sh screen
-bind = $mainMod CTRL, S, exec, ~/dotfiles/.config/hypr/scripts/screenshot.sh all
+bind = $mainMod, L, exec, ~/dotfiles/hypr/scripts/logout.sh
+bind = $mainMod, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh random
+bind = $mainMod SHIFT, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh picker
+bind = $mainMod, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh rect
+bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh screen
+bind = $mainMod CTRL, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh all
 bind = $mainMod SHIFT, B, exec, killall waybar; waybar
 bind = $mainMod SHIFT, N, exec, killall mako; mako
 
@@ -182,6 +182,6 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = , xf86AudioRaiseVolume, exec, ~/dotfiles/.config/hypr/scripts/volume.sh inc
-bind = , xf86AudioLowerVolume, exec, ~/dotfiles/.config/hypr/scripts/volume.sh dec
-bind = , xf86AudioMute, exec, ~/dotfiles/.config/hypr/scripts/volume.sh toggle
+bind = , xf86AudioRaiseVolume, exec, ~/dotfiles/hypr/scripts/volume.sh inc
+bind = , xf86AudioLowerVolume, exec, ~/dotfiles/hypr/scripts/volume.sh dec
+bind = , xf86AudioMute, exec, ~/dotfiles/hypr/scripts/volume.sh toggle
