Switched back to using stow

--- a/hyprland/.config/waybar/config.jsonc
+++ b/hyprland/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
     "layer": "top",
     "position": "top",
-    "height": 24,
+    "height": 28,
 
     "modules-left": [
         "hyprland/workspaces"
@@ -24,7 +24,13 @@
 
     "hyprland/workspaces": {
         "disable-scroll": true,
-        "all-outputs": false
+        "all-outputs": false,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "󰅩",
+            "2": "",
+            "3": "󰙯",
+        }
     },
 
     "hyprland/window": {
@@ -54,9 +60,9 @@
         "format": "{icon} {volume}%",
         "format-muted": " ",
         "on-click": "pavucontrol",
-        "on-click-right": "~/dotfiles/hypr/scripts/volume.sh toggle",
-        "on-scroll-up": "~/dotfiles/hypr/scripts/volume.sh inc",
-        "on-scroll-down": "~/dotfiles/hypr/scripts/volume.sh dec",
+        "on-click-right": "~/.config/hypr/scripts/volume.sh toggle",
+        "on-scroll-up": "~/.config/hypr/scripts/volume.sh inc",
+        "on-scroll-down": "~/.config/hypr/scripts/volume.sh dec",
         "scroll-step": 5,
         "format-icons": {
             "headphone": "",
@@ -74,10 +80,15 @@
         "format-source": " {volume}%",
         "format-source-muted": "",
         "on-click": "pavucontrol",
-        "on-click-right": "~/dotfiles/hypr/scripts/volume.sh toggle-mic",
-        "on-scroll-up": "~/dotfiles/hypr/scripts/volume.sh mic-inc",
-        "on-scroll-down": "~/dotfiles/hypr/scripts/volume.sh mic-dec",
+        "on-click-right": "~/.config/hypr/scripts/volume.sh toggle-mic",
+        "on-scroll-up": "~/.config/hypr/scripts/volume.sh mic-inc",
+        "on-scroll-down": "~/.config/hypr/scripts/volume.sh mic-dec",
         "scroll-step": 5
+    },
+
+    "tray": {
+        "icon-size": 16,
+        "spacing": 10
     },
 
     "clock": {
