--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -2,6 +2,8 @@ set -g mouse on
 set -s escape-time 0
 
 set-option -sa terminal-overrides ",xterm*:Tc"
+# set -ga terminal-overrides ",screen-256color*:Tc"
+# set-option -g default-terminal "screen-256color"
 
 # remap prefix
 unbind C-b
@@ -10,7 +12,7 @@ bind C-a send-prefix
 
 # reload config
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.tmux.conf
 
 # better split commands
 unbind %
