--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,14 +5,7 @@ monitor=DP-1,1920x1080,1920x0,1
 # Workspace rules
 workspace=1, monitor:DVI-D-1, default:true, persistent:true
 workspace=2, monitor:DP-1, default:true, persistent:true
-workspace=3, monitor:DP-1, persistent:true
-workspace=4, monitor:DP-1
-workspace=5, monitor:DP-1
-workspace=6, monitor:DP-1
-workspace=7, monitor:DP-1
-workspace=8, monitor:DP-1
-workspace=9, monitor:DP-1
-workspace=10, monitor:DP-1
+workspace=3, monitor:DP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -30,7 +23,6 @@ exec-once = hypridle
 
 exec-once = alacritty
 exec-once = firefox
-exec-once = discord
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -134,24 +126,13 @@ misc {
     disable_hyprland_logo = true
 }
 
-# example per-device config
-# see https://wiki.hyprland.org/configuring/keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
-
-# example windowrule v1
-# windowrule = float, ^(kitty)$
-# example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# see https://wiki.hyprland.org/configuring/window-rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # you'll probably like this.
-
 windowrule = float, thunar
 windowrule = float, pavucontrol
 windowrule = float, qimgv
 
 windowrulev2 = workspace 1 silent, ^class:(Alacritty)$
+windowrulev2 = float, ^class:(virt-manager)$
+windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
 windowrulev2 = workspace 3 silent, ^class:(discord)$
 
