--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ monitor=DP-1,1920x1080,1920x0,1
 workspace=1, monitor:DVI-D-1, default:true, persistent:true
 workspace=2, monitor:DP-1, default:true, persistent:true
 workspace=3, monitor:DP-1
+workspace=4, monitor:DP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -20,6 +21,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = swww init
 exec-once = ~/.config/hypr/scripts/wallpaper.sh init
 exec-once = hypridle
+exec-once = udiskie
 
 exec-once = alacritty
 exec-once = firefox
@@ -70,7 +72,7 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
+        size = 4
         passes = 3
         ignore_opacity = 1
         new_optimizations = true
@@ -123,7 +125,9 @@ gestures {
 }
 
 misc {
+    focus_on_activate = true
     disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 windowrule = float, thunar
@@ -135,6 +139,7 @@ windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
 windowrulev2 = workspace 3 silent, ^class:(discord)$
+windowrulev2 = workspace 4 silent, ^class:(Spotify)$
 
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 $mainmod = super
