--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -151,6 +151,9 @@ bind = $mainmod shift, f, fullscreen,
 bind = $mainmod, p, pseudo,
 bind = $mainmod, j, togglesplit,
 
+bind = $mainmod, n, exec, wlsunset -T 5600
+bind = $mainmod shift, n, exec, killall wlsunset
+
 bind = $mainmod, l, exec, ~/.config/hypr/scripts/logout.sh
 bind = $mainmod, w, exec, ~/.config/hypr/scripts/wallpaper.sh random
 bind = $mainmod shift, w, exec, ~/.config/hypr/scripts/wallpaper.sh picker
