--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,13 +17,14 @@ exec-once = waybar
 exec-once = mako
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
-exec-once = swww init
-exec-once = ~/.config/hypr/scripts/wallpaper.sh init
+exec-once = hyprpaper
 exec-once = hypridle
+# exec-once = ~/.config/hypr/scripts/wallpaper.sh init
 exec-once = udiskie
+exec-once = wlsunset -T 5600
 
-exec-once = alacritty
-exec-once = firefox
+# exec-once = alacritty
+# exec-once = firefox
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -55,7 +56,9 @@ general {
     gaps_out = 4
     border_size = 2
 
-    col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
+    # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
+    # col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(826655ff)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -76,6 +79,8 @@ decoration {
         ignore_opacity = 1
         new_optimizations = true
     }
+
+    inactive_opacity = 0.9
 
     drop_shadow = no
 }
@@ -151,12 +156,9 @@ bind = $mainmod shift, f, fullscreen,
 bind = $mainmod, p, pseudo,
 bind = $mainmod, j, togglesplit,
 
-bind = $mainmod, n, exec, wlsunset -T 5600
-bind = $mainmod shift, n, exec, killall wlsunset
-
 bind = $mainmod, l, exec, ~/.config/hypr/scripts/logout.sh
-bind = $mainmod, w, exec, ~/.config/hypr/scripts/wallpaper.sh random
-bind = $mainmod shift, w, exec, ~/.config/hypr/scripts/wallpaper.sh picker
+# bind = $mainmod, w, exec, ~/.config/hypr/scripts/wallpaper.sh random
+# bind = $mainmod shift, w, exec, ~/.config/hypr/scripts/wallpaper.sh picker
 bind = $mainmod, s, exec, ~/.config/hypr/scripts/screenshot.sh rect
 bind = $mainmod shift, s, exec, ~/.config/hypr/scripts/screenshot.sh screen
 bind = $mainmod ctrl, s, exec, ~/.config/hypr/scripts/screenshot.sh all
