--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,25 +1,33 @@
 background {
     monitor =
-    path = screenshot
-    color = rgba(25, 20, 20, 1.0)
-
-    blur_passes = 3
-    blur_size = 4
+    path = $HOME/.wallpapers/mountains.png
 }
 
 input-field {
     monitor =
     size = 200, 50
     outline_thickness = 0
-    dots_size = 0.2
+    dots_size = 0.33
     dots_spacing = 0.15
     dots_center = true
-    inner_color = rgba(0, 0, 0, 0)
-    outer_color = rgba(0, 0, 0, 0)
-    font_color = rgb(200, 200, 200)
+    dots_rounding = -1
+    outer_color = rgb(151515)
+    inner_color = rgba(245, 104, 17, 0.6)
+    font_color = rgb(ffffff)
     fade_on_empty = true
+    fade_timeout = 1000
+    placeholder_text = <i>Input Password...</i>
     hide_input = false
-
+    rounding = -1
+    check_color = rgba(245, 154, 17, 0.8)
+    fail_color = rgba(245, 40, 17, 0.8)
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    fail_transition = 300
+    capslock_color = -1
+    numlock_color = -1
+    bothlock_color = -1
+    invert_numlock = false
+    swap_font_color = false
     position = 0, -20
     halign = center
     valign = center
@@ -27,12 +35,26 @@ input-field {
 
 label {
     monitor =
-    text = Enter your password to unlock
-    color = rgba(220, 220, 220, 1.0)
-    font_size = 25
+    text = cmd[update:1000] echo "$TIME"
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 55
     font_family = MesloLGS Nerd Font
+    position = -100, -40
+    halign = right
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
+}
 
-    position = 0, 80
-    halign = center
-    valign = center
+label {
+    monitor =
+    text = $USER
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 20
+    font_family = MesloLGS Nerd Font
+    position = -100, 160
+    halign = right
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
 }
