--- a/base/.config/alacritty/alacritty.toml
+++ b/base/.config/alacritty/alacritty.toml
@@ -1,4 +1,7 @@
 live_config_reload = true
+import = [
+    "~/.config/alacritty/gruvbox_dark.toml"
+]
 
 [env]
 TERM = "xterm-256color"
@@ -10,7 +13,7 @@ padding = { x = 10, y = 10 }
 startup_mode = "Maximized"
 
 [font]
-size = 16
+size = 18
 normal = { family = "IosevkaTerm Nerd Font", style = "Regular" }
 
 [colors.primary]
