--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,60 +1,56 @@
 background {
     monitor =
     path = $HOME/.wallpapers/mountains.png
+    blur_passes = 3
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
+}
+
+general {
+    no_fade_in = false
+    grace = 0
+    disable_loading_bar = true
 }
 
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 0
-    dots_size = 0.33
-    dots_spacing = 0.15
+    size = 235, 55
+    outline_thickness = 2
+    dots_size = 0.25 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    dots_rounding = -1
-    outer_color = rgb(151515)
-    inner_color = rgba(245, 104, 17, 0.6)
-    font_color = rgb(ffffff)
-    fade_on_empty = true
-    fade_timeout = 1000
-    placeholder_text = <i>Input Password...</i>
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(0, 0, 0, 0.5)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
+    font_family = MesloLGS Nerd Font
+    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
     hide_input = false
-    rounding = -1
-    check_color = rgba(245, 154, 17, 0.8)
-    fail_color = rgba(245, 40, 17, 0.8)
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-    fail_transition = 300
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1
-    invert_numlock = false
-    swap_font_color = false
-    position = 0, -20
+    position = 0, -120
     halign = center
     valign = center
 }
 
 label {
     monitor =
-    text = cmd[update:1000] echo "$TIME"
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 55
+    text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
+    color = rgba(255, 255, 255, 0.8)
+    font_size = 90
     font_family = MesloLGS Nerd Font
-    position = -100, -40
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+    position = 0, -300
+    halign = center
+    valign = top
 }
 
 label {
     monitor =
-    text = $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 20
+    text = Hi there, $USER!
+    color = rgba(255, 255, 255, 0.7)
+    font_size = 25
     font_family = MesloLGS Nerd Font
-    position = -100, 160
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+    position = 0, -40
+    halign = center
+    valign = center
 }
