Integrate config with linux

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -23,9 +23,6 @@ exec-once = hypridle
 exec-once = udiskie
 exec-once = wlsunset -T 5600
 
-# exec-once = alacritty
-# exec-once = firefox
-
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -52,14 +49,18 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
-    gaps_out = 4
+    gaps_in = 4
+    gaps_out = 8
     border_size = 2
 
     # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
     # col.inactive_border = rgba(595959aa)
-    col.active_border = rgba(826655ff)
+
+    col.active_border = rgba(2b9ec4ff) rgba(00c476ff) 45deg
     col.inactive_border = rgba(595959aa)
+
+    # col.active_border = rgba(826655ff)
+    # col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 
@@ -80,7 +81,7 @@ decoration {
         new_optimizations = true
     }
 
-    inactive_opacity = 0.9
+    # inactive_opacity = 0.9
 
     drop_shadow = no
 }
@@ -125,11 +126,11 @@ misc {
     disable_splash_rendering = true
 }
 
-windowrule = float, thunar
+windowrule = float, Thunar
 windowrule = float, pavucontrol
 windowrule = float, qimgv
 
-windowrulev2 = workspace 1 silent, ^class:(Alacritty)$
+windowrulev2 = workspace 1 silent, ^class:(wezterm)$
 windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
@@ -140,7 +141,7 @@ windowrulev2 = workspace 4 silent, ^class:(Spotify)$
 $mainmod = super
 
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
-bind = $mainmod, return, exec, alacritty
+bind = $mainmod, return, exec, wezterm
 bind = $mainmod, b, exec, firefox
 bind = $mainmod, e, exec, thunar
 bind = $mainmod, space, exec, tofi-drun --drun-launch=true
@@ -159,6 +160,7 @@ bind = $mainmod shift, s, exec, ~/.config/hypr/scripts/screenshot.sh screen
 bind = $mainmod ctrl, s, exec, ~/.config/hypr/scripts/screenshot.sh all
 bind = $mainmod shift, b, exec, killall waybar; waybar
 bind = $mainmod shift, n, exec, killall mako; mako
+bind = $mainmod shift, w, exec, killall hyprpaper; hyprpaper
 
 bind = $mainmod, 1, workspace, 1
 bind = $mainmod, 2, workspace, 2
