--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.wallpapers/mountains.png
-wallpaper = ,~/.wallpapers/mountains.png
+preload = ~/.wallpapers/mountains3.jpg
+wallpaper = ,~/.wallpapers/mountains3.jpg
