--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -25,7 +25,7 @@ input-field {
     inner_color = rgba(0, 0, 0, 0.5)
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    font_family = MesloLGS Nerd Font
+    font_family = Noto Sans Light
     placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
     hide_input = false
     position = 0, -120
@@ -38,7 +38,7 @@ label {
     text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
     color = rgba(255, 255, 255, 0.8)
     font_size = 90
-    font_family = MesloLGS Nerd Font
+    font_family = Noto Sans Light
     position = 0, -300
     halign = center
     valign = top
@@ -48,8 +48,8 @@ label {
     monitor =
     text = Hi there, $USER!
     color = rgba(255, 255, 255, 0.7)
-    font_size = 25
-    font_family = MesloLGS Nerd Font
+    font_size = 30
+    font_family = Noto Sans Light
     position = 0, -40
     halign = center
     valign = center
