--- a/hyprland/.config/waybar/config.jsonc
+++ b/hyprland/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
     "layer": "top",
     "position": "top",
-    "height": 30,
+    "height": 32,
 
     "modules-left": [
         "hyprland/workspaces"
@@ -25,40 +25,37 @@
     "hyprland/workspaces": {
         "disable-scroll": true,
         "all-outputs": false,
-        "format": "{icon}",
-        "format-icons": {
-            "1": "󰅩",
-            "2": "",
-            "3": "󰙯",
-            "4": ""
-        }
+        "format": "{icon}"
+        // "format-icons": {
+        //     "1": "󰅩",
+        //     "2": "",
+        //     "3": "󰙯",
+        //     "4": ""
+        // }
     },
 
     "hyprland/window": {
-        "max-length": 50,
+        "max-length": 50
     },
 
     "cpu": {
-        "format": " {usage}%",
-        "on-click": "alacritty -o 'window.startup_mode=\"Fullscreen\"' -e btop"
+        "format": "{usage}%  "
     },
     "memory": {
-        "format": " {}%",
-        "on-click": "alacritty -o 'window.startup_mode=\"Fullscreen\"' -e btop"
+        "format": "{}%  "
     },
     "disk": {
-        "format": "󰋊 {}%",
-        "on-click": "alacritty -o 'window.startup_mode=\"Fullscreen\"' -e btop"
+        "format": "{}% 󰋊 "
     },
 
     "network": {
-        "format-wifi": " {essid} {ipaddr}",
-        "format-ethernet": " {ifname} {ipaddr}",
-        "format-disconnected": " Disconnected",
+        "format-wifi": "{essid}  ",
+        "format-ethernet": "{ifname}  ",
+        "format-disconnected": "Disconnected  "
     },
 
     "pulseaudio": {
-        "format": "{icon} {volume}%",
+        "format": "{volume}% {icon} ",
         "format-muted": " ",
         "on-click": "pavucontrol",
         "on-click-right": "~/.config/hypr/scripts/volume.sh toggle",
@@ -78,7 +75,7 @@
 
     "pulseaudio#microphone": {
         "format": "{format_source}",
-        "format-source": " {volume}%",
+        "format-source": "{volume}%  ",
         "format-source-muted": "",
         "on-click": "pavucontrol",
         "on-click-right": "~/.config/hypr/scripts/volume.sh toggle-mic",
@@ -93,6 +90,6 @@
     },
 
     "clock": {
-        "format": " {:%H:%M}"
+        "format": "{:%a %b %d  %H:%M}"
     }
 }
