switch back to alacritty and lsp cmp disable

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,9 +17,8 @@ exec-once = waybar
 exec-once = mako
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
-exec-once = hyprpaper
+exec-once = hyprpaper & sleep 1 && ~/.config/hypr/scripts/wallpaper.sh init
 exec-once = hypridle
-# exec-once = ~/.config/hypr/scripts/wallpaper.sh init
 exec-once = udiskie
 exec-once = wlsunset -T 5600
 
@@ -130,7 +129,7 @@ windowrule = float, Thunar
 windowrule = float, pavucontrol
 windowrule = float, qimgv
 
-windowrulev2 = workspace 1 silent, ^class:(wezterm)$
+windowrulev2 = workspace 1 silent, ^class:(alacritty)$
 windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
@@ -141,7 +140,7 @@ windowrulev2 = workspace 4 silent, ^class:(Spotify)$
 $mainmod = super
 
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
-bind = $mainmod, return, exec, wezterm
+bind = $mainmod, return, exec, alacritty
 bind = $mainmod, b, exec, firefox
 bind = $mainmod, e, exec, thunar
 bind = $mainmod, space, exec, tofi-drun --drun-launch=true
@@ -153,8 +152,8 @@ bind = $mainmod, p, pseudo,
 bind = $mainmod, j, togglesplit,
 
 bind = $mainmod, l, exec, ~/.config/hypr/scripts/logout.sh
-# bind = $mainmod, w, exec, ~/.config/hypr/scripts/wallpaper.sh random
-# bind = $mainmod shift, w, exec, ~/.config/hypr/scripts/wallpaper.sh picker
+bind = $mainmod, w, exec, ~/.config/hypr/scripts/wallpaper.sh random
+bind = $mainmod shift, w, exec, ~/.config/hypr/scripts/wallpaper.sh picker
 bind = $mainmod, s, exec, ~/.config/hypr/scripts/screenshot.sh rect
 bind = $mainmod shift, s, exec, ~/.config/hypr/scripts/screenshot.sh screen
 bind = $mainmod ctrl, s, exec, ~/.config/hypr/scripts/screenshot.sh all
