--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -46,9 +46,9 @@ label {
 
 label {
     monitor =
-    text = Hi there, $USER!
+    text = Hello there!
     color = rgba(255, 255, 255, 0.7)
-    font_size = 30
+    font_size = 35
     font_family = Noto Sans Light
     position = 0, -40
     halign = center
