--- a/base/.config/alacritty/alacritty.toml
+++ b/base/.config/alacritty/alacritty.toml
@@ -1,7 +1,4 @@
 live_config_reload = true
-import = [
-    "~/.config/alacritty/gruvbox_dark.toml"
-]
 
 [env]
 TERM = "xterm-256color"
@@ -11,8 +8,29 @@ padding = { x = 10, y = 10 }
 startup_mode = "Maximized"
 
 [font]
-size = 18
-normal = { family = "IosevkaTerm Nerd Font", style = "Regular" }
+size = 15
+normal = { family = "Noto Sans Mono", style = "Regular" }
 
 [colors.primary]
-background = "#000000"
+background = '#1d2021'
+foreground = '#d4be98'
+
+[colors.normal]
+black   = '#32302f'
+red     = '#ea6962'
+green   = '#a9b665'
+yellow  = '#d8a657'
+blue    = '#7daea3'
+magenta = '#d3869b'
+cyan    = '#89b482'
+white   = '#d4be99'
+
+[colors.bright]
+black   = '#32302f'
+red     = '#ea6962'
+green   = '#a9b665'
+yellow  = '#d8a657'
+blue    = '#7daea3'
+magenta = '#d3869b'
+cyan    = '#89b482'
+white   = '#d4be98'
