--- a/hyprland/.config/mako/config
+++ b/hyprland/.config/mako/config
@@ -6,7 +6,7 @@ on-button-middle=none
 on-button-right=dismiss-all
 on-touch=dismiss
 
-font=Noto Sans 13
+font=Noto Sans Mono 13
 width=350
 height=100
 margin=20
@@ -27,7 +27,7 @@ layer=overlay
 anchor=top-right
 
 background-color=#000000bb
-text-color=#ffffff
+text-color=#dddddd
 border-color=#16b19d
 progress-color=over #89b4fa
 
