--- a/hyprland/.config/tofi/config
+++ b/hyprland/.config/tofi/config
@@ -1,14 +1,17 @@
-font = "MesloLGS Nerd Font"
-font-size = 16
+font = "Noto Sans Mono"
+font-size = 17
 selection-color = #31ada9
+text-cursor = true
 text-cursor-style = block
+text-cursor-color = #bbbbbb
 prompt-text = ""
 placeholder-text = "Search..."
 placeholder-color = #AAAAAA
-result-spacing = 5
+result-spacing = 1
 width = 600
 height = 290
 background-color = #000000bb
+text-color = #dddddd
 outline-width = 0
 border-width = 2
 border-color = #16b19d
@@ -18,4 +21,3 @@ padding-bottom = 10
 padding-left = 10
 padding-right = 10
 anchor = center
-text-cursor = true
