--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once = waybar
 exec-once = mako
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
-exec-once = hyprpaper & sleep 1 && ~/.config/hypr/scripts/wallpaper.sh init
+exec-once = ~/.config/hypr/scripts/wallpaper.sh init && hyprpaper
 exec-once = hypridle
 exec-once = udiskie
 exec-once = wlsunset -T 5600
