--- a/terminal/.config/alacritty/alacritty.toml
+++ b/terminal/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
@@ -8,7 +7,7 @@ padding = { x = 10, y = 10 }
 startup_mode = "Maximized"
 
 [font]
-size = 14.5
+size = 13.4
 normal = { family = "Noto Sans Mono", style = "Regular" }
 
 [colors.primary]
@@ -34,3 +33,6 @@ blue    = '#7daea3'
 magenta = '#d3869b'
 cyan    = '#89b482'
 white   = '#d4be98'
+
+[general]
+live_config_reload = true
