switch to ghostty

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -127,7 +127,7 @@ windowrule = float, Thunar
 windowrule = float, pavucontrol
 windowrule = float, qimgv
 
-windowrulev2 = workspace 1 silent, ^class:(alacritty)$
+windowrulev2 = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
 windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
@@ -138,7 +138,7 @@ windowrulev2 = workspace 4 silent, ^class:(Spotify)$
 $mainmod = super
 
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
-bind = $mainmod, return, exec, alacritty
+bind = $mainmod, return, exec, ghostty
 bind = $mainmod, b, exec, firefox
 bind = $mainmod, e, exec, thunar
 bind = $mainmod, space, exec, tofi-drun --drun-launch=true
