--- a/hyprland/.config/tofi/config
+++ b/hyprland/.config/tofi/config
@@ -1,4 +1,4 @@
-font = "Noto Sans Mono"
+font = "Fira Code"
 font-size = 17
 selection-color = #31ada9
 text-cursor = true
@@ -6,12 +6,12 @@ text-cursor-style = block
 text-cursor-color = #bbbbbb
 prompt-text = ""
 placeholder-text = "Search..."
-placeholder-color = #AAAAAA
+placeholder-color = #aaaaaa
 result-spacing = 1
 width = 600
 height = 290
 background-color = #000000bb
-text-color = #dddddd
+text-color = #cccccc
 outline-width = 0
 border-width = 2
 border-color = #16b19d
