--- a/hyprland/.config/mako/config
+++ b/hyprland/.config/mako/config
@@ -6,7 +6,7 @@ on-button-middle=none
 on-button-right=dismiss-all
 on-touch=dismiss
 
-font=Noto Sans Mono 13
+font=Fira Code 13
 width=350
 height=100
 margin=20
