--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -21,12 +21,13 @@ exec-once = ~/.config/hypr/scripts/wallpaper.sh init && hyprpaper
 exec-once = hypridle
 exec-once = udiskie
 exec-once = wlsunset -T 5600
+exec-once = hyprctl setcursor 'BreezeX-Black' 28
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,28
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -52,13 +53,13 @@ general {
     gaps_out = 8
     border_size = 2
 
-    # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
-    # col.inactive_border = rgba(595959aa)
-
-    col.active_border = rgba(2b9ec4ff) rgba(00c476ff) 45deg
+    col.active_border = rgba(0086b3ff) rgba(00b36bff) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # col.active_border = rgba(826655ff)
+    # col.active_border = rgba(2b9ec4ff) rgba(00c476ff) 45deg
+    # col.inactive_border = rgba(595959aa)
+
+    # col.active_border = rgba(118878ff)
     # col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -88,22 +89,30 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = fluent_decel, 0.1, 1, 0, 1
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    animation = windows, 1, 3, md3_decel, popin 60%
-    animation = border, 1, 10, default
-    animation = fade, 1, 2.5, md3_decel
-    animation = workspaces, 1, 3.5, easeOutExpo, slide
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+    bezier = myBezier, 0, 0.9, 0.1, 1
+    animation = windows, 1, 5, myBezier
+    animation = windowsOut, 1, 5, default, popin 80%
+    animation = border, 1, 8, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 5, default
+    animation = workspaces, 1, 5, default
+
+    # bezier = linear, 0, 0, 1, 1
+    # bezier = md3_standard, 0.2, 0, 0, 1
+    # bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    # bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    # bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    # bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+    # bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    # bezier = fluent_decel, 0.1, 1, 0, 1
+    # bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    # bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    # bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    # animation = windows, 1, 3, md3_decel, popin 60%
+    # animation = border, 1, 10, default
+    # animation = fade, 1, 2.5, md3_decel
+    # animation = workspaces, 1, 3.5, easeOutExpo, slide
+    # animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 dwindle {
