--- a/terminal/.config/ghostty/config
+++ b/terminal/.config/ghostty/config
@@ -1,6 +1,6 @@
 theme = gruvbox-material-dark
 font-family = "Fira Code"
-font-style-bold = false
+# font-style-bold = false
 font-size = 14
 cursor-style = "block"
 cursor-style-blink = false
@@ -9,3 +9,5 @@ window-padding-x = 5
 window-padding-y = 5
 shell-integration-features = no-cursor
 confirm-close-surface = false
+
+# custom-shader = "background.glsl"
