spliting terminal into two

--- a/terminal.mac/.config/ghostty/config
+++ b/terminal.mac/.config/ghostty/config
@@ -1,13 +1,10 @@
 theme = gruvbox-material-dark
 font-family = "Fira Code"
-# font-style-bold = false
-font-size = 14
+font-size = 16
 cursor-style = "block"
 cursor-style-blink = false
-window-decoration = false
 window-padding-x = 5
 window-padding-y = 5
+window-width = 1000
+window-height = 1000
 shell-integration-features = no-cursor
-confirm-close-surface = false
-
-# custom-shader = "background.glsl"
