add obsidian to hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ workspace=1, monitor:DVI-D-1, default:true, persistent:true
 workspace=2, monitor:DP-1, default:true, persistent:true
 workspace=3, monitor:DP-1
 workspace=4, monitor:DP-1
+workspace=5, monitor:DVI-D-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -140,8 +141,9 @@ windowrulev2 = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
 windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
 windowrulev2 = workspace 2 silent, ^class:(firefox)$
-windowrulev2 = workspace 3 silent, ^class:(discord)$
-windowrulev2 = workspace 4 silent, ^class:(Spotify)$
+windowrulev2 = workspace 3 silent, ^class:(obsidian)$
+windowrulev2 = workspace 4 silent, ^class:(discord)$
+windowrulev2 = workspace 5 silent, ^class:(Spotify)$
 
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 $mainmod = super
