--- a/terminal.mac/.config/ghostty/config
+++ b/terminal.mac/.config/ghostty/config
@@ -8,3 +8,13 @@ window-padding-y = 5
 window-width = 1000
 window-height = 1000
 shell-integration-features = no-cursor
+
+keybind = ctrl+a>r=reload_config
+keybind = ctrl+a>c=new_tab
+keybind = ctrl+a>n=next_tab
+keybind = ctrl+a>p=previous_tab
+keybind = ctrl+a>s=new_split:auto
+keybind = ctrl+a>k=goto_split:up
+keybind = ctrl+a>j=goto_split:down
+keybind = ctrl+a>l=goto_split:right
+keybind = ctrl+a>h=goto_split:left
