switch to brave on linux

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -140,7 +140,7 @@ windowrule = float, qimgv
 windowrulev2 = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
 windowrulev2 = float, ^class:(virt-manager)$
 windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
-windowrulev2 = workspace 2 silent, ^class:(firefox)$
+windowrulev2 = workspace 2 silent, ^class:(Brave-browser)$
 windowrulev2 = workspace 3 silent, ^class:(discord)$
 windowrulev2 = workspace 4 silent, ^class:(obsidian)$
 windowrulev2 = workspace 5 silent, ^class:(Spotify)$
@@ -150,7 +150,7 @@ $mainmod = super
 
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
 bind = $mainmod, return, exec, ghostty
-bind = $mainmod, b, exec, firefox
+bind = $mainmod, b, exec, brave
 bind = $mainmod, e, exec, thunar
 bind = $mainmod, space, exec, tofi-drun --drun-launch=true
 bind = $mainmod, q, killactive,
