--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -50,12 +50,12 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 8
-    border_size = 2
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 0
 
-    col.active_border = rgba(0086b3ff) rgba(00b36bff) 45deg
-    col.inactive_border = rgba(595959aa)
+    # col.active_border = rgba(0086b3ff) rgba(00b36bff) 45deg
+    # col.inactive_border = rgba(595959aa)
 
     # col.active_border = rgba(2b9ec4ff) rgba(00c476ff) 45deg
     # col.inactive_border = rgba(595959aa)
@@ -72,7 +72,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 0
 
     blur {
         enabled = true
@@ -82,21 +82,21 @@ decoration {
         new_optimizations = true
     }
 
-    # inactive_opacity = 0.9
+    active_opacity = 0.97
+    inactive_opacity = 0.97
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0, 0.9, 0.1, 1
-    animation = windows, 1, 5, myBezier
-    animation = windowsOut, 1, 5, default, popin 80%
-    animation = border, 1, 8, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 5, default
-    animation = workspaces, 1, 5, default
+    # animation = windows, 1, 2, default, slide
+    # animation = windowsOut, 1, 2, default, slide
+    # animation = border, 1, 5, default
+    # animation = borderangle, 1, 5, default
+    # animation = fade, 1, 5, default
+    # animation = workspaces, 1, 2, default, fade
 
     # bezier = linear, 0, 0, 1, 1
     # bezier = md3_standard, 0.2, 0, 0, 1
@@ -133,17 +133,17 @@ misc {
     disable_splash_rendering = true
 }
 
-windowrule = float, Thunar
-windowrule = float, pavucontrol
-windowrule = float, qimgv
+windowrule = float, ^class:(thunar)$
+windowrule = float, ^class:(org.pulseaudio.pavucontrol)$
+windowrule = float, ^class:(qimgv)$
 
-windowrulev2 = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
-windowrulev2 = float, ^class:(virt-manager)$
-windowrulev2 = workspace 1 silent, ^class:(virt-manager)$
-windowrulev2 = workspace 2 silent, ^class:(Brave-browser)$
-windowrulev2 = workspace 3 silent, ^class:(discord)$
-windowrulev2 = workspace 4 silent, ^class:(obsidian)$
-windowrulev2 = workspace 5 silent, ^class:(Spotify)$
+windowrule = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
+windowrule = float, ^class:(virt-manager)$
+windowrule = workspace 1 silent, ^class:(virt-manager)$
+windowrule = workspace 2 silent, ^class:(Brave-browser)$
+windowrule = workspace 3 silent, ^class:(discord)$
+windowrule = workspace 4 silent, ^class:(obsidian)$
+windowrule = workspace 5 silent, ^class:(Spotify)$
 
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 $mainmod = super
