--- a/hyprland/.config/tofi/config
+++ b/hyprland/.config/tofi/config
@@ -1,21 +1,21 @@
 font = "Fira Code"
 font-size = 17
-selection-color = #009988
+selection-color = #c3a46f
 text-cursor = true
 text-cursor-style = block
-text-cursor-color = #bbbbbb
+text-cursor-color = #ddc7a1
 prompt-text = ""
 placeholder-text = "Search..."
-placeholder-color = #aaaaaa
+placeholder-color = #7c6f64
 result-spacing = 1
 width = 600
 height = 290
-background-color = #000000bb
-text-color = #cccccc
+background-color = #252423dd
+text-color = #d4be98
 outline-width = 0
 border-width = 2
-border-color = #009988
-corner-radius = 5
+border-color = #46413e
+corner-radius = 0
 padding-top = 10
 padding-bottom = 10
 padding-left = 10
