--- a/hyprland/.config/mako/config
+++ b/hyprland/.config/mako/config
@@ -12,7 +12,7 @@ height=100
 margin=20
 padding=15
 border-size=2
-border-radius=5
+border-radius=0
 icons=1
 max-icon-size=48
 icon-location=left
@@ -26,10 +26,9 @@ max-visible=5
 layer=overlay
 anchor=top-right
 
-background-color=#000000bb
-text-color=#dddddd
-border-color=#009988
-progress-color=over #89b4fa
+background-color=#252423ee
+text-color=#d4be98
+border-color=#46413e
 
 [urgency=low]
 default-timeout=5000
