ghostty and hypr

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -3,11 +3,10 @@ monitor=DVI-D-1,1920x1080,0x0,1
 monitor=DP-1,1920x1080,1920x0,1
 
 # Workspace rules
-workspace=1, monitor:DVI-D-1, default:true, persistent:true
-workspace=2, monitor:DP-1, default:true, persistent:true
-workspace=3, monitor:DP-1
-workspace=4, monitor:DP-1
-workspace=5, monitor:DVI-D-1
+workspace=1, monitor:DVI-D-1, default:true, persistent:true, on-created-empty:ghostty
+workspace=2, monitor:DP-1, default:true, persistent:true, on-created-empty:brave
+workspace=3, monitor:DP-1, on-created-empty:discord
+workspace=4, monitor:DP-1, on-created-empty:spotify
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -82,21 +81,21 @@ decoration {
         new_optimizations = true
     }
 
-    active_opacity = 0.97
-    inactive_opacity = 0.97
+    active_opacity = 0.90
+    inactive_opacity = 0.90
 }
 
 animations {
-    enabled = no
+    enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    # animation = windows, 1, 2, default, slide
-    # animation = windowsOut, 1, 2, default, slide
-    # animation = border, 1, 5, default
-    # animation = borderangle, 1, 5, default
-    # animation = fade, 1, 5, default
-    # animation = workspaces, 1, 2, default, fade
+    animation = windows, 1, 2, default, slide
+    animation = windowsOut, 1, 2, default, slide
+    animation = border, 1, 5, default
+    animation = borderangle, 1, 5, default
+    animation = fade, 1, 5, default
+    animation = workspaces, 1, 1.8, default, slide
 
     # bezier = linear, 0, 0, 1, 1
     # bezier = md3_standard, 0.2, 0, 0, 1
@@ -136,14 +135,7 @@ misc {
 windowrule = float, ^class:(thunar)$
 windowrule = float, ^class:(org.pulseaudio.pavucontrol)$
 windowrule = float, ^class:(qimgv)$
-
-windowrule = workspace 1 silent, ^class:(com.mitchellh.ghostty)$
 windowrule = float, ^class:(virt-manager)$
-windowrule = workspace 1 silent, ^class:(virt-manager)$
-windowrule = workspace 2 silent, ^class:(Brave-browser)$
-windowrule = workspace 3 silent, ^class:(discord)$
-windowrule = workspace 4 silent, ^class:(obsidian)$
-windowrule = workspace 5 silent, ^class:(Spotify)$
 
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 $mainmod = super
