--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=DP-1,1920x1080,1920x0,1
 
 # Workspace rules
 workspace=1, monitor:DVI-D-1, default:true, persistent:true, on-created-empty:ghostty
-workspace=2, monitor:DP-1, default:true, persistent:true, on-created-empty:brave
+workspace=2, monitor:DP-1, default:true, persistent:true, on-created-empty:zen-browser
 workspace=3, monitor:DP-1, on-created-empty:discord
 workspace=4, monitor:DP-1, on-created-empty:spotify
 
@@ -49,9 +49,9 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 0
+    gaps_in = 4
+    gaps_out = 8
+    border_size = 2
 
     # col.active_border = rgba(0086b3ff) rgba(00b36bff) 45deg
     # col.inactive_border = rgba(595959aa)
@@ -59,8 +59,8 @@ general {
     # col.active_border = rgba(2b9ec4ff) rgba(00c476ff) 45deg
     # col.inactive_border = rgba(595959aa)
 
-    # col.active_border = rgba(118878ff)
-    # col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(af6c31aa)
+    col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 
@@ -71,7 +71,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 0
+    rounding = 4
 
     blur {
         enabled = true
@@ -81,8 +81,8 @@ decoration {
         new_optimizations = true
     }
 
-    active_opacity = 0.90
-    inactive_opacity = 0.90
+    active_opacity = 0.98
+    inactive_opacity = 0.96
 }
 
 animations {
@@ -90,29 +90,29 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    animation = windows, 1, 2, default, slide
-    animation = windowsOut, 1, 2, default, slide
-    animation = border, 1, 5, default
-    animation = borderangle, 1, 5, default
-    animation = fade, 1, 5, default
-    animation = workspaces, 1, 1.8, default, slide
+    # animation = windows, 1, 2, default, slide
+    # animation = windowsOut, 1, 2, default, slide
+    # animation = border, 1, 5, default
+    # animation = borderangle, 1, 5, default
+    # animation = fade, 1, 5, default
+    # animation = workspaces, 1, 1.8, default, slide
 
-    # bezier = linear, 0, 0, 1, 1
-    # bezier = md3_standard, 0.2, 0, 0, 1
-    # bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    # bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    # bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    # bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
-    # bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    # bezier = fluent_decel, 0.1, 1, 0, 1
-    # bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    # bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    # bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    # animation = windows, 1, 3, md3_decel, popin 60%
-    # animation = border, 1, 10, default
-    # animation = fade, 1, 2.5, md3_decel
-    # animation = workspaces, 1, 3.5, easeOutExpo, slide
-    # animation = specialWorkspace, 1, 3, md3_decel, slidevert
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    animation = windows, 1, 3, md3_decel, popin 60%
+    animation = border, 1, 10, default
+    animation = fade, 1, 2.5, md3_decel
+    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 dwindle {
@@ -123,7 +123,10 @@ dwindle {
 
 gestures {
     # see https://wiki.hyprland.org/configuring/variables/ for more
-    workspace_swipe = off
+}
+
+ecosystem {
+    no_update_news = true
 }
 
 misc {
@@ -132,17 +135,29 @@ misc {
     disable_splash_rendering = true
 }
 
-windowrule = float, ^class:(thunar)$
-windowrule = float, ^class:(org.pulseaudio.pavucontrol)$
-windowrule = float, ^class:(qimgv)$
-windowrule = float, ^class:(virt-manager)$
+windowrule = float, class:thunar
+windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = float, class:qimgv
+windowrule = float, class:virt-manager
+
+windowrule = float, title:(.*)KiCad(.*)
+windowrule = size 1600 800, title:(.*)KiCad(.*)
+
+windowrule = float, title:Assign Footprints
+windowrule = size 1600 800, title:Assign Footprints
+
+windowrule = float, title:(.*)Symbol Editor(.*)
+windowrule = size 1600 800, title:(.*)Symbol Editor(.*)
+
+windowrule = float, title:(.*)Footprint Editor(.*)
+windowrule = size 1600 800, title:(.*)Footprint Editor(.*)
 
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 $mainmod = super
 
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
 bind = $mainmod, return, exec, ghostty
-bind = $mainmod, b, exec, brave
+bind = $mainmod, b, exec, zen-browser
 bind = $mainmod, e, exec, thunar
 bind = $mainmod, space, exec, tofi-drun --drun-launch=true
 bind = $mainmod, q, killactive,
